set( INCLUDE_FILES
    ${CMAKE_SOURCE_DIR}/src/OSspecific/POSIX/regExp.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/HashTables/HashTable/HashTable.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/HashTables/HashTable/HashTable.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/HashTables/HashTable/HashTableI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/HashTables/HashTable/HashTableIO.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/ILList/ILList.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/ILList/ILList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/ILList/ILListIO.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/LList/LList.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/LList/LList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/LList/LListIO.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/LPtrList/LPtrList.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/LPtrList/LPtrList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/LPtrList/LPtrListIO.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/UILList/UILList.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/UILList/UILList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/accessTypes/UILList/UILListIO.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/linkTypes/DLListBase/DLListBase.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/linkTypes/DLListBase/DLListBaseI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/linkTypes/SLListBase/SLListBase.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/linkTypes/SLListBase/SLListBaseI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/user/DLList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/user/IDLList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/user/LIFOStack.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/user/SLList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/LinkedLists/user/SLPtrList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/BiIndirectList/BiIndirectList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/BiIndirectList/BiIndirectListI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/DynamicList/DynamicList.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/DynamicList/DynamicList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/DynamicList/DynamicListI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/FixedList/FixedList.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/FixedList/FixedList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/FixedList/FixedListI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/FixedList/FixedListIO.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/IndirectList/IndirectList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/IndirectList/IndirectListI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/List/List.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/List/List.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/List/ListI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/List/ListIO.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/List/ListLoopM.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/ListOps/ListOps.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/ListOps/ListOpsTemplates.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/PtrList/PtrList.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/PtrList/PtrList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/PtrList/PtrListI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/PtrList/PtrListIO.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/UIndirectList/UIndirectList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/UIndirectList/UIndirectListI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/UIndirectList/UIndirectListIO.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/UList/UList.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/UList/UList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/UList/UListI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/Lists/UList/UListIO.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/NamedEnum/NamedEnum.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/containers/NamedEnum/NamedEnum.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/IOstreams.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/IOstreams/INew.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/IOstreams/IOstream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/IOstreams/InfoProxy.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/IOstreams/Istream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/IOstreams/Ostream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/IPstream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/OPstream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/Pstream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/PstreamBuffers.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/PstreamCombineReduceOps.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/PstreamReduceOps.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/UIPstream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/UOPstream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/UPstream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/combineGatherScatter.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/exchange.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/gatherScatter.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Pstreams/gatherScatterList.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Sstreams/ISstream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Sstreams/ISstreamI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Sstreams/OSstream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Sstreams/OSstreamI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Sstreams/prefixOSstream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/StringStreams/IStringStream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/StringStreams/OStringStream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/Tstreams/ITstream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/token/token.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/token/tokenI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/IOstreams/token/tokenList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/dictionary/dictionary.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/dictionary/dictionaryTemplates.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/dictionary/entry/entry.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/dictionary/primitiveEntry/primitiveEntry.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/dictionary/primitiveEntry/primitiveEntryTemplates.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/error/StaticAssert.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/error/error.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/error/errorManip.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/error/messageStream.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/runTimeSelection/construction/runTimeSelectionTables.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/typeInfo/className.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/db/typeInfo/typeInfo.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/Field/Field.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/Field/Field.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/Field/FieldFunctions.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/Field/FieldFunctions.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/Field/FieldFunctionsM.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/Field/FieldFunctionsM.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/Field/FieldM.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/Field/FieldMapper.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/Field/FieldReuseFunctions.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/Field/undefFieldFunctionsM.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/fieldTypes.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/labelField/labelField.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/primitiveFields.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/primitiveFieldsFwd.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/scalarField/scalarField.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/sphericalTensorField/sphericalTensorField.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/symmTensorField/symmTensorField.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/tensorField/tensorField.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/fields/Fields/vectorField/vectorField.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/constants/mathematical/mathematicalConstants.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/debug/debug.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/debug/defineDebugSwitch.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/debug/simpleRegIOobject.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/global/unitConversion/unitConversion.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/memory/Xfer/Xfer.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/memory/Xfer/XferI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/memory/autoPtr/autoPtr.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/memory/autoPtr/autoPtrI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/memory/refCount/refCount.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/memory/tmp/tmp.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/memory/tmp/tmpI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveShapes/point/point.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveShapes/point/pointField.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/meshes/primitiveShapes/point/pointFieldFwd.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Scalar/Scalar.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Scalar/doubleFloat.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Scalar/doubleScalar/doubleScalar.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Scalar/floatScalar/floatScalar.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Scalar/lists/scalarList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Scalar/scalar/scalar.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/SphericalTensor/SphericalTensor.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/SphericalTensor/SphericalTensorI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/SphericalTensor/sphericalTensor/sphericalTensor.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Swap/Swap.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/SymmTensor/SymmTensor.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/SymmTensor/SymmTensorI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/SymmTensor/symmTensor/symmTensor.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Tensor/Tensor.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Tensor/TensorI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Tensor/tensor/tensor.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Vector/Vector.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Vector/VectorI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Vector/vector/vector.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Vector2D/Vector2D.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Vector2D/Vector2DI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/Vector2D/vector2D/vector2D.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/VectorSpace/VectorSpace.C
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/VectorSpace/VectorSpace.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/VectorSpace/VectorSpaceI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/VectorSpace/VectorSpaceOps.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/VectorSpace/products.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/bools/bool/bool.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/chars/char/char.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/contiguous/contiguous.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/direction/direction.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/hashes/Hash/Hash.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/hashes/Hasher/Hasher.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/int/int.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/int32/int32.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/int64/int64.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/label/label.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/label/labelSpecific.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/lists/labelList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/uLabel/uLabel.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/uLabel/uLabelSpecific.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/uint/uint.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/uint32/uint32.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ints/uint64/uint64.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/nullObject/nullObject.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/nullObject/nullObjectI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/ops/ops.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/pTraits/pTraits.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/fileName/fileName.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/fileName/fileNameI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/keyType/keyType.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/keyType/keyTypeI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/lists/stringList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/lists/wordList.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/string/string.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/string/stringI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/word/word.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/word/wordI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/wordRe/wordRe.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/strings/wordRe/wordReI.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/triad/triad.H
    ${CMAKE_SOURCE_DIR}/src/OpenFOAM/primitives/triad/triadI.H
)

install( FILES ${INCLUDE_FILES}
	DESTINATION ${CMAKE_INSTALL_PREFIX}/include )
