# add_subdirectory( Pstream )
# add_subdirectory( OSspecific/POSIX )
# add_subdirectory( OpenFOAM )
# add_subdirectory( fileFormats )
# add_subdirectory( surfMesh )
# add_subdirectory( triSurface )
# add_subdirectory( meshTools )
# add_subdirectory( edgeMesh )
# add_subdirectory( dummyThirdParty )
# add_subdirectory( finiteVolume )
add_subdirectory( lagrangian/basic )
add_subdirectory( lagrangian/distributionModels )
add_subdirectory( genericPatchFields )

# add_subdirectory( parallel/decompose )

