add_subdirectory( Pstream )
add_subdirectory( OSspecific/POSIX )
add_subdirectory( OpenFOAM )
add_subdirectory( fileFormats )
add_subdirectory( surfMesh )
add_subdirectory( triSurface )
add_subdirectory( meshTools )
add_subdirectory( edgeMesh )
add_subdirectory( dummyThirdParty )
add_subdirectory( finiteVolume )
add_subdirectory( genericPatchFields )
add_subdirectory( conversion )
add_subdirectory( sampling )
add_subdirectory( dynamicMesh )
add_subdirectory( dynamicFvMesh )
add_subdirectory( topoChangerFvMesh )
add_subdirectory( parallel )
add_subdirectory( ODE )
add_subdirectory( randomProcesses )
add_subdirectory( transportModels )
add_subdirectory( thermophysicalModels )
add_subdirectory( TurbulenceModels )
add_subdirectory( combustionModels )
add_subdirectory( regionModels )
add_subdirectory( lagrangian )
add_subdirectory( mesh )
add_subdirectory( renumber )
add_subdirectory( fvAgglomerationMethods )
add_subdirectory( fvMotionSolver )
add_subdirectory( engine )
add_subdirectory( fvOptions )
add_subdirectory( regionCoupled )
add_subdirectory( postProcessing )
add_subdirectory( sixDoFRigidBodyMotion )
