add_subdirectory( heatTransfer )
# add_subdirectory( multiphase )
# add_subdirectory( discreteMethods )
# add_subdirectory( stressAnalysis )
# add_subdirectory( electromagnetics )
# add_subdirectory( financial )
# add_subdirectory( lagrangian )
add_subdirectory( basic )
# add_subdirectory( combustion )
# add_subdirectory( DNS )
add_subdirectory( compressible )
add_subdirectory( incompressible )
